syntax = "proto3";

package pb;

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message DrawCardRequest {
    int64 game_id = 1;
    int64 player_game_id = 2;
  }
  
  message DrawCardResponse {
    int64 card_id = 1;
  }